--- a/opportunities.html
+++ b/opportunities.html
@@ -1,12 +1,26 @@
-<h1> Web Dev Opportunities </h1>
+<h1>Web Dev Opportunities</h1>
 
-<p>
-  Web development can take you many places in the world and your career. Here are just some of the opportunities you'll have.
-</p>
+<p>Web dev is a great start but it's only one of many different careers in digital technologies. Here are some of the others.</p>
 
 <ul>
-  <li> You can reach an enormous audience through the web because clients and customers can use any device they want to access your applications. </li>
-  <li> You only have to build your applications once: for the web. You don't need to build one version for iOS, one for Android, one for Windows, and one for MacOS. </li>
-  <li> You can earn a great salary - more than 400 jobs on seek.co.nz offering over $100k at the time of writing. </li>
-  <li> You can work remotely from anywhere in the world. </li>
+  <li>Application developer</li>
+  <li>Server engineer</li>
+  <li>Network engineer</li>
+  <li>Project manager</li>
+  <li>Systems Architect</li>
+  <li>Artificial intelligence researcher</li>
+  <li>Cyber security consultant (hacker)</li>
 </ul>
+
+<style>
+  h1 {
+    font-family: sans-serif;
+    font-size: 3em;
+    color: rgb(255, 255, 255);
+    text-shadow: 2px 2px rgba(23, 7, 168, 0.637);
+    background-color: rgba(68, 126, 165, 0.76);
+    text-align: center;
+  }
+  h1:hover {
+    background-color: rgba(202, 160, 68, 0.74);
+</style>
