--- a/index.html
+++ b/index.html
@@ -1,12 +1,33 @@
 <h1> Why Web Dev? </h1>
 
+<a href="opportunities.html"> Web Dev Opportunities </a>
+
 <p>
   There are plenty of way to learn coding, but here are some reasons why we focus on web dev.
 </p>
 
 <ul>
-  <li> You can learn to code starting easy, with HTML and CSS, before getting into the real coding with JavaScript. </li>
-  <li> You can be creative with the visual aesthetic of your applications as well as solve problems in coding. </li>
-  <li> You can build useful applications to make money, help others, or just make your own life easier. </li>
-  <li> Web dev has loads of transferrable skills to other areas, from project management to marketing to accounting to entrepeneurship. </li>
+  <li> You can learn to code starting easy, with HTML and CSS, before getting into the real coding with JavaScript. 
+  </li>
+  <li> You can be creative with the visual aesthetic of your applications as well as solve problems in coding. 
+  </li>
+  <li> You can build useful applications to make money, help others, or just make your own life easier. 
+  </li>
+  <li> Web dev has loads of transferrable skills to other areas, from project management to marketing to accounting to entrepeneurship. 
+  </li>
 </ul>
+
+<style>
+  h1 {
+    font-family: sans-serif;
+    font-size: 3em;
+    color: rgb(255, 255, 255);
+    text-shadow: 2px 2px rgba(23, 7, 168, 0.637);
+    background-color: rgba(68, 126, 165, 0.76);
+    text-align: center;
+  }
+  h1:hover {
+    background-color: rgba(202, 160, 68, 0.74);
+  }
+<s/tyle>    
+
