Added image and styled it

--- a/index.html
+++ b/index.html
@@ -1,35 +1,46 @@
-<h1> Why Web Dev? </h1>
+<h1>Why Web Dev?</h1>
 
 <a href="index.html"> Home </a>
 <a href="opportunities.html"> Web Dev Opportunities </a>
 <a href="other-careers.html"> Other Coding Careers </a>
 
-<p>
-  There are plenty of way to learn coding, but here are some reasons why we focus on web dev.
-</p>
+<p>There are plenty of way to learn coding, but here are some reasons why we focus on web dev.</p>
 
 <ul>
-  <li> You can learn to code starting easy, with HTML and CSS, before getting into the real coding with JavaScript. 
-  </li>
-  <li> You can be creative with the visual aesthetic of your applications as well as solve problems in coding. 
-  </li>
-  <li> You can build useful applications to make money, help others, or just make your own life easier. 
-  </li>
-  <li> Web dev has loads of transferrable skills to other areas, from project management to marketing to accounting to entrepeneurship. 
-  </li>
+  <li>You can learn to code starting easy, with HTML and CSS, before getting into the real coding with JavaScript.</li>
+  <li>You can be creative with the visual aesthetic of your applications as well as solve problems in coding.</li>
+  <li>You can build useful applications to make money, help others, or just make your own life easier.</li>
+  <li>Web dev has loads of transferrable skills to other areas, from project management to marketing to accounting to entrepeneurship.</li>
 </ul>
 
+<img src="html-logo.svg" />
+
 <style>
-  h1 {
+  * {
     font-family: sans-serif;
-    font-size: 3em;
-    color: rgb(255, 255, 255);
-    text-shadow: 2px 2px rgba(23, 7, 168, 0.637);
-    background-color: rgba(68, 126, 165, 0.76);
+  }
+
+  h1 {
     text-align: center;
   }
-  h1:hover {
-    background-color: rgba(202, 160, 68, 0.74);
-  }
-<s/tyle>    
 
+  a {
+    text-decoration: none;
+    color: black;
+    border: 1px solid black;
+    border-radius: 0.5em;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
+  }
+
+  a:hover {
+    color: white;
+    background-color: black;
+  }
+
+  img {
+    padding-left: 0.5em;
+    padding-right: 0.5em;
+    text-align: center;
+  }
+</style>
