--- a/other-careers.html
+++ b/other-careers.html
@@ -1,12 +1,41 @@
-<h1> Other Careers </h1>
+<h1>Other Careers</h1>
 
-<p>
-  Web development can take you many places in the world and your career. Here are just some of the opportunities you'll have.
-</p>
+<a href="index.html"> Home </a>
+<a href="opportunities.html"> Web Dev Opportunities </a>
+<a href="other-careers.html"> Other Coding Careers </a>
+
+<p>Web development can take you many places in the world and your career. Here are just some of the opportunities you'll have.</p>
 
 <ul>
-  <li> You can reach an enormous audience through the web because clients and customers can use any device they want to access your applications. </li>
-  <li> You only have to build your applications once: for the web. You don't need to build one version for iOS, one for Android, one for Windows, and one for MacOS. </li>
-  <li> You can earn a great salary - more than 400 jobs on seek.co.nz offering over $100k at the time of writing. </li>
-  <li> You can work remotely from anywhere in the world. </li>
+  <li>You can reach an enormous audience through the web because clients and customers can use any device they want to access your applications.</li>
+  <li>You only have to build your applications once: for the web. You don't need to build one version for iOS, one for Android, one for Windows, and one for MacOS.</li>
+  <li>You can earn a great salary - more than 400 jobs on seek.co.nz offering over $100k at the time of writing.</li>
+  <li>You can work remotely from anywhere in the world.</li>
 </ul>
+
+<style>
+  h1 {
+    font-family: sans-serif;
+    font-size: 3em;
+    color: rgb(255, 255, 255);
+    text-shadow: 2px 2px #f55727d5;
+    background-color: #e08835;
+    text-align: center;
+    padding: 0.15em;
+  }
+  h1:hover {
+    background-color: rgba(0, 0, 0, 0.74);
+  }
+  a {
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    border: 1px solid #f55727d5;
+    background-color: #e08835;
+    font-size: medium;
+    border-radius: 0.5em;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
+    margin: 1em;
+    text-align: center;
+  }
+</style>
