--- a/index.html
+++ b/index.html
@@ -16,21 +16,27 @@
 <img src="html-logo.svg" />
 
 <style>
-  * {
-    font-family: sans-serif;
-  }
-
   h1 {
+    font-family: sans-serif;
+    font-size: 3em;
+    color: rgb(255, 255, 255);
+    text-shadow: 2px 2px #f55727d5;
+    background-color: #e08835;
     text-align: center;
+    padding: 0.15em;
   }
 
   a {
     text-decoration: none;
-    color: black;
-    border: 1px solid black;
+    color: rgb(255, 255, 255);
+    border: 1px solid #f55727d5;
+    background-color: #e08835;
+    font-size: medium;
     border-radius: 0.5em;
     padding-left: 0.5em;
     padding-right: 0.5em;
+    margin: 1em;
+    text-align: center;
   }
 
   a:hover {
