I finished the task

--- a/other-careers.html
+++ b/other-careers.html
@@ -23,9 +23,7 @@
     text-align: center;
     padding: 0.15em;
   }
-  h1:hover {
-    background-color: rgba(0, 0, 0, 0.74);
-  }
+
   a {
     text-decoration: none;
     color: rgb(255, 255, 255);
@@ -37,5 +35,10 @@
     padding-right: 0.5em;
     margin: 1em;
     text-align: center;
+  }
+
+  a:hover {
+    color: white;
+    background-color: black;
   }
 </style>
