Added footer and changed the h1 font

--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<head>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=NTR&display=swap" rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Gloock&family=NTR&display=swap" rel="stylesheet" />
+</head>
+
 <h1>Why Web Dev?</h1>
 
 <a href="index.html"> Home </a>
@@ -15,6 +24,8 @@
 
 <img src="html-logo.svg" />
 
+<footer>ద్వారా: వారుణి</footer>
+
 <style>
   h1 {
     font-family: sans-serif;
@@ -23,7 +34,8 @@
     text-shadow: 2px 2px #f55727d5;
     background-color: #e08835;
     text-align: center;
-    padding: 0.15em;
+    font-family: "Gloock", serif;
+    font-family: "NTR", sans-serif;
   }
 
   a {
@@ -53,5 +65,10 @@
 
   li {
     list-style-type: "\1f443";
+  }
+
+  footer {
+    font-family: "NTR", sans-serif;
+    text-align: right;
   }
 </style>
