--- a/other-careers.html
+++ b/other-careers.html
@@ -22,6 +22,8 @@
     background-color: #e08835;
     text-align: center;
     padding: 0.15em;
+    font-family: "Gloock", serif;
+    font-family: "NTR", sans-serif;
   }
 
   a {
@@ -40,5 +42,9 @@
   a:hover {
     color: white;
     background-color: black;
+  }
+
+  li {
+    list-style-type: "\1f443";
   }
 </style>
