Fixed the body structure

--- a/index.html
+++ b/index.html
@@ -2,73 +2,97 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=NTR&display=swap" rel="stylesheet" />
+
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Gloock&family=NTR&display=swap" rel="stylesheet" />
+
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Gloock&family=NTR&display=swap" rel="stylesheet" />
 </head>
 
-<h1>Why Web Dev?</h1>
+<body>
+  <header>
+    <h1>Why Web Dev?</h1>
+  </header>
 
-<a href="index.html"> Home </a>
-<a href="opportunities.html"> Web Dev Opportunities </a>
-<a href="other-careers.html"> Other Coding Careers </a>
+  <nav>
+    <a href="index.html"> Home </a>
+    <a href="opportunities.html"> Web Dev Opportunities </a>
+    <a href="other-careers.html"> Other Coding Careers </a>
+  </nav>
 
-<p>There are plenty of way to learn coding, but here are some reasons why we focus on web dev.</p>
+  <main>
+    <p>There are plenty of way to learn coding, but here are some reasons why we focus on web dev.</p>
 
-<ul>
-  <li>You can learn to code starting easy, with HTML and CSS, before getting into the real coding with JavaScript.</li>
-  <li>You can be creative with the visual aesthetic of your applications as well as solve problems in coding.</li>
-  <li>You can build useful applications to make money, help others, or just make your own life easier.</li>
-  <li>Web dev has loads of transferrable skills to other areas, from project management to marketing to accounting to entrepeneurship.</li>
-</ul>
+    <ul>
+      <li>You can learn to code starting easy, with HTML and CSS, before getting into the real coding with JavaScript.</li>
+      <li>You can be creative with the visual aesthetic of your applications as well as solve problems in coding.</li>
+      <li>You can build useful applications to make money, help others, or just make your own life easier.</li>
+      <li>Web dev has loads of transferrable skills to other areas, from project management to marketing to accounting to entrepeneurship.</li>
+      <link rel="preconnect" href="https://fonts.googleapis.com" />
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+      <link href="https://fonts.googleapis.com/css2?family=Gloock&family=NTR&display=swap" rel="stylesheet" />
+    </ul>
 
-<img src="html-logo.svg" />
+    <img src="html-logo.svg" />
+  </main>
 
-<footer>ద్వారా: వారుణి</footer>
+  <footer>ద్వారా: వారుణి</footer>
 
-<style>
-  h1 {
-    font-family: sans-serif;
-    font-size: 3em;
-    color: rgb(255, 255, 255);
-    text-shadow: 2px 2px #f55727d5;
-    background-color: #e08835;
-    text-align: center;
-    font-family: "Gloock", serif;
-    font-family: "NTR", sans-serif;
-  }
+  <style>
+    h1 {
+      font-family: sans-serif;
+      font-size: 3.5em;
+      color: rgb(255, 255, 255);
+      text-shadow: 2px 2px #f55727d5;
+      background-color: #e08835;
+      text-align: center;
+      font-family: "Gloock", serif;
+      font-family: "NTR", sans-serif;
+    }
 
-  a {
-    text-decoration: none;
-    color: rgb(255, 255, 255);
-    border: 1px solid #f55727d5;
-    background-color: #e08835;
-    font-size: medium;
-    border-radius: 0.5em;
-    padding-left: 0.5em;
-    padding-right: 0.5em;
-    margin: 1em;
-    text-align: center;
-  }
+    a {
+      text-decoration: none;
+      color: rgb(255, 255, 255);
+      border: 1px solid #f55727d5;
+      background-color: #e08835;
+      font-size: medium;
+      border-radius: 0.5em;
+      padding-left: 0.5em;
+      padding-right: 0.5em;
+      margin: 1em;
+      text-align: center;
+    }
 
-  a:hover {
-    color: white;
-    background-color: black;
-  }
+    a:hover {
+      color: white;
+      background-color: black;
+    }
 
-  img {
-    padding-left: 0.5em;
-    padding-right: 0.5em;
-    text-align: center;
-    width: 10rem;
-  }
+    ul {
+      font-family: "Gloock", serif;
+      font-family: "NTR", sans-serif;
+    }
 
-  li {
-    list-style-type: "\1f443";
-  }
+    img {
+      padding-left: 0.5em;
+      padding-right: 0.5em;
+      text-align: center;
+      width: 10rem;
+    }
 
-  footer {
-    font-family: "NTR", sans-serif;
-    text-align: right;
-  }
-</style>
+    ul {
+      font-family: "Gloock", serif;
+      font-family: "NTR", sans-serif;
+      padding-left: 0.5em;
+      padding-right: 0.5em;
+    }
+
+    footer {
+      font-family: "NTR", sans-serif;
+      text-align: right;
+    }
+  </style>
+</body>
