--- a/opportunities.html
+++ b/opportunities.html
@@ -1,27 +1,63 @@
-<h1>Web Dev Opportunities</h1>
+<body>
+  <header>
+    <h1>Web Dev Opportunities</h1>
+  </header>
 
-<p>Web dev is a great start but it's only one of many different careers in digital technologies. Here are some of the others.</p>
+  <nav>
+    <a href="index.html"> Home </a>
+    <a href="opportunities.html"> Web Dev Opportunities </a>
+    <a href="other-careers.html"> Other Coding Careers </a>
+  </nav>
 
-<ul>
-  <li>Application developer</li>
-  <li>Server engineer</li>
-  <li>Network engineer</li>
-  <li>Project manager</li>
-  <li>Systems Architect</li>
-  <li>Artificial intelligence researcher</li>
-  <li>Cyber security consultant (hacker)</li>
-</ul>
+  <main>
+    <p>Web dev is a great start but it's only one of many different careers in digital technologies. Here are some of the others.</p>
 
-<style>
-  h1 {
-    font-family: sans-serif;
-    font-size: 3em;
-    color: rgb(255, 255, 255);
-    text-shadow: 2px 2px rgba(23, 7, 168, 0.637);
-    background-color: rgba(68, 126, 165, 0.76);
-    text-align: center;
-  }
-  h1:hover {
-    background-color: rgba(202, 160, 68, 0.74);
-  }
-</style>
+    <ul>
+      <li>Application developer</li>
+      <li>Server engineer</li>
+      <li>Network engineer</li>
+      <li>Project manager</li>
+      <li>Systems Architect</li>
+      <li>Artificial intelligence researcher</li>
+      <li>Cyber security consultant (hacker)</li>
+    </ul>
+  </main>
+
+  <footer>ద్వారా: వారుణి</footer>
+
+  <style>
+    h1 {
+      font-family: sans-serif;
+      font-size: 3em;
+      color: rgb(255, 255, 255);
+      text-shadow: 2px 2px #f55727d5;
+      background-color: #e08835;
+      text-align: center;
+      padding: 0.15em;
+      font-family: "Gloock", serif;
+      font-family: "NTR", sans-serif;
+    }
+
+    a {
+      text-decoration: none;
+      color: rgb(255, 255, 255);
+      border: 1px solid #f55727d5;
+      background-color: #e08835;
+      font-size: medium;
+      border-radius: 0.5em;
+      padding-left: 0.5em;
+      padding-right: 0.5em;
+      margin: 1em;
+      text-align: center;
+    }
+
+    a:hover {
+      color: white;
+      background-color: black;
+    }
+
+    li {
+      list-style-type: "\1f443";
+    }
+  </style>
+</body>
