--- a/opportunities.html
+++ b/opportunities.html
@@ -26,6 +26,28 @@
   <footer>ద్వారా: వారుణి</footer>
 
   <style>
+    body {
+      display: grid;
+      grid:
+        " h    h    h  " 3em
+        " .    m    .  " auto
+        " f    f    f  " 5em
+        / 1fr 5fr 1fr;
+    }
+
+    header {
+      grid-area: h;
+    }
+    nav {
+      grid-area: n;
+    }
+    main {
+      grid-area: m;
+    }
+    footer {
+      grid-area: f;
+    }
+
     h1 {
       font-family: sans-serif;
       font-size: 3em;
