--- a/other-careers.html
+++ b/other-careers.html
@@ -23,6 +23,28 @@
   <footer>ద్వారా: వారుణి</footer>
 
   <style>
+    body {
+      display: grid;
+      grid:
+        " h    h    n  " 3em
+        " m    m    m  " auto
+        " f    f    f  " 5em
+        / 1fr 5fr 1fr;
+    }
+
+    header {
+      grid-area: h;
+    }
+    nav {
+      grid-area: n;
+    }
+    main {
+      grid-area: m;
+    }
+    footer {
+      grid-area: f;
+    }
+
     h1 {
       font-family: sans-serif;
       font-size: 3em;
