Changed the layout again

--- a/opportunities.html
+++ b/opportunities.html
@@ -1,3 +1,17 @@
+<head>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=NTR&display=swap" rel="stylesheet" />
+
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Gloock&family=NTR&display=swap" rel="stylesheet" />
+
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Gloock&family=NTR&display=swap" rel="stylesheet" />
+</head>
+
 <body>
   <header>
     <h1>Web Dev Opportunities</h1>
@@ -23,63 +37,63 @@
     </ul>
   </main>
 
-  <footer>ద్వారా: వారుణి</footer>
-
-  <style>
-    body {
-      display: grid;
-      grid:
-        " h    h    h  " 3em
-        " .    m    .  " auto
-        " f    f    f  " 5em
-        / 1fr 5fr 1fr;
-    }
-
-    header {
-      grid-area: h;
-    }
-    nav {
-      grid-area: n;
-    }
-    main {
-      grid-area: m;
-    }
-    footer {
-      grid-area: f;
-    }
-
-    h1 {
-      font-family: sans-serif;
-      font-size: 3em;
-      color: rgb(255, 255, 255);
-      text-shadow: 2px 2px #f55727d5;
-      background-color: #e08835;
-      text-align: center;
-      padding: 0.15em;
-      font-family: "Gloock", serif;
-      font-family: "NTR", sans-serif;
-    }
-
-    a {
-      text-decoration: none;
-      color: rgb(255, 255, 255);
-      border: 1px solid #f55727d5;
-      background-color: #e08835;
-      font-size: medium;
-      border-radius: 0.5em;
-      padding-left: 0.5em;
-      padding-right: 0.5em;
-      margin: 1em;
-      text-align: center;
-    }
-
-    a:hover {
-      color: white;
-      background-color: black;
-    }
-
-    li {
-      list-style-type: "\1f443";
-    }
-  </style>
+  <footer>Varuni: 2023</footer>
 </body>
+
+<style>
+  body {
+    display: grid;
+    grid:
+      " h    h    n  " auto
+      " m    m    m  " auto
+      " f    f    f  " auto
+      / 1fr 5fr 1fr;
+  }
+
+  header {
+    grid-area: h;
+  }
+  nav {
+    grid-area: n;
+  }
+  main {
+    grid-area: m;
+  }
+  footer {
+    grid-area: f;
+  }
+
+  h1 {
+    font-family: sans-serif;
+    font-size: 3em;
+    color: rgb(255, 255, 255);
+    text-shadow: 2px 2px #f55727d5;
+    background-color: #e08835;
+    text-align: center;
+    padding: 0.5em;
+    font-family: "Gloock", serif;
+    font-family: "NTR", sans-serif;
+  }
+
+  a {
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    border: 1px solid #f55727d5;
+    background-color: #e08835;
+    font-size: medium;
+    border-radius: 0.5em;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
+    margin: 1em;
+    text-align: center;
+  }
+
+  a:hover {
+    color: white;
+    background-color: black;
+  }
+
+  li {
+    list-style-type: "\1f443";
+  }
+</style>
