--- a/index.html
+++ b/index.html
@@ -39,82 +39,82 @@
     <img src="html-logo.svg" />
   </main>
 
-  <footer>ద్వారా: వారుణి</footer>
-
-  <style>
-    body {
-      display: grid;
-      grid:
-        " h    h    h  " 3em
-        " .    m    .  " auto
-        " f    f    f  " 5em
-        / 1fr 5fr 1fr;
-    }
-
-    header {
-      grid-area: h;
-    }
-    nav {
-      grid-area: n;
-    }
-    main {
-      grid-area: m;
-    }
-    footer {
-      grid-area: f;
-    }
-
-    h1 {
-      font-family: sans-serif;
-      font-size: 3.5em;
-      color: rgb(255, 255, 255);
-      text-shadow: 2px 2px #f55727d5;
-      background-color: #e08835;
-      text-align: center;
-      font-family: "Gloock", serif;
-      font-family: "NTR", sans-serif;
-    }
-
-    a {
-      text-decoration: none;
-      color: rgb(255, 255, 255);
-      border: 1px solid #f55727d5;
-      background-color: #e08835;
-      font-size: medium;
-      border-radius: 0.5em;
-      padding-left: 0.5em;
-      padding-right: 0.5em;
-      margin: 1em;
-      text-align: center;
-    }
-
-    a:hover {
-      color: white;
-      background-color: black;
-    }
-
-    ul {
-      font-family: "Gloock", serif;
-      font-family: "NTR", sans-serif;
-    }
-
-    img {
-      padding-left: 0.5em;
-      padding-right: 0.5em;
-      text-align: center;
-      width: 10rem;
-    }
-
-    ul {
-      font-family: "Gloock", serif;
-      font-family: "NTR", sans-serif;
-      padding-left: 0.5em;
-      padding-right: 0.5em;
-    }
-
-    footer {
-      font-family: "NTR", sans-serif;
-      text-align: right;
-    }
-  </style>
+  <footer>Varuni: 2023</footer>
 </body>
+
+<style>
+  body {
+    display: grid;
+    grid:
+      " h    h    n  " auto
+      " m    m    m  " auto
+      " f    f    f  " auto
+      / 1fr 5fr 1fr;
+  }
+
+  header {
+    grid-area: h;
+  }
+  nav {
+    grid-area: n;
+  }
+  main {
+    grid-area: m;
+  }
+  footer {
+    grid-area: f;
+  }
+
+  h1 {
+    font-family: sans-serif;
+    font-size: 3.5em;
+    color: rgb(255, 255, 255);
+    text-shadow: 2px 2px #f55727d5;
+    background-color: #e08835;
+    text-align: center;
+    font-family: "Gloock", serif;
+    font-family: "NTR", sans-serif;
+  }
+
+  a {
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    border: 1px solid #f55727d5;
+    background-color: #e08835;
+    font-size: medium;
+    border-radius: 0.5em;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
+    margin: 1em;
+    text-align: center;
+  }
+
+  a:hover {
+    color: white;
+    background-color: black;
+  }
+
+  ul {
+    font-family: "Gloock", serif;
+    font-family: "NTR", sans-serif;
+  }
+
+  img {
+    padding-left: 0.5em;
+    padding-right: 0.5em;
+    text-align: center;
+    width: 10rem;
+  }
+
+  ul {
+    font-family: "Gloock", serif;
+    font-family: "NTR", sans-serif;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
+  }
+
+  footer {
+    font-family: "NTR", sans-serif;
+    text-align: right;
+  }
+</style>
