--- a/other-careers.html
+++ b/other-careers.html
@@ -12,85 +12,111 @@
   <link href="https://fonts.googleapis.com/css2?family=Gloock&family=NTR&display=swap" rel="stylesheet" />
 </head>
 
-<body>
-  <header>
-    <h1>Other Careers</h1>
-  </header>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Coding</title>
+  </head>
 
-  <nav>
-    <a href="index.html"> Home </a>
-    <a href="opportunities.html"> Web Dev Opportunities </a>
-    <a href="other-careers.html"> Other Coding Careers </a>
-  </nav>
+  <body>
+    <header>
+      <h1>Other Careers</h1>
+    </header>
 
-  <main>
-    <p>Web development can take you many places in the world and your career. Here are just some of the opportunities you'll have.</p>
+    <nav>
+      <a href="index.html"> Home </a>
+      <a href="opportunities.html"> Web Dev Opportunities </a>
+      <a href="other-careers.html"> Other Coding Careers </a>
+    </nav>
 
-    <ul>
-      <li>You can reach an enormous audience through the web because clients and customers can use any device they want to access your applications.</li>
-      <li>You only have to build your applications once: for the web. You don't need to build one version for iOS, one for Android, one for Windows, and one for MacOS.</li>
-      <li>You can earn a great salary - more than 400 jobs on seek.co.nz offering over $100k at the time of writing.</li>
-      <li>You can work remotely from anywhere in the world.</li>
-    </ul>
-  </main>
+    <main>
+      <p>Web development can take you many places in the world and your career. Here are just some of the opportunities you'll have.</p>
 
-  <footer>Varuni: 2023</footer>
-</body>
+      <ul>
+        <li>You can reach an enormous audience through the web because clients and customers can use any device they want to access your applications.</li>
+        <li>You only have to build your applications once: for the web. You don't need to build one version for iOS, one for Android, one for Windows, and one for MacOS.</li>
+        <li>You can earn a great salary - more than 400 jobs on seek.co.nz offering over $100k at the time of writing.</li>
+        <li>You can work remotely from anywhere in the world.</li>
+      </ul>
+    </main>
 
-<style>
-  body {
-    display: grid;
-    grid:
-      " h    h    n  " auto
-      " m    m    m  " auto
-      " f    f    f  " auto
-      / 1fr 5fr 1fr;
-  }
+    <footer>&copy Varuni: 2023</footer>
+  </body>
 
-  header {
-    grid-area: h;
-  }
-  nav {
-    grid-area: n;
-  }
-  main {
-    grid-area: m;
-  }
-  footer {
-    grid-area: f;
-  }
+  <style>
+    body {
+      display: grid;
+      grid:
+        " h    h    n  " auto
+        " m    m    m  " auto
+        " f    f    f  " auto
+        / 7fr 3fr 3fr;
+    }
 
-  h1 {
-    font-family: sans-serif;
-    font-size: 3em;
-    color: rgb(255, 255, 255);
-    text-shadow: 2px 2px #f55727d5;
-    background-color: #e08835;
-    text-align: center;
-    padding: 0.15em;
-    font-family: "Gloock", serif;
-    font-family: "NTR", sans-serif;
-  }
+    header {
+      grid-area: h;
+    }
+    nav {
+      grid-area: n;
+    }
+    main {
+      grid-area: m;
+    }
+    footer {
+      grid-area: f;
+    }
 
-  a {
-    text-decoration: none;
-    color: rgb(255, 255, 255);
-    border: 1px solid #f55727d5;
-    background-color: #e08835;
-    font-size: medium;
-    border-radius: 0.5em;
-    padding-left: 0.5em;
-    padding-right: 0.5em;
-    margin: 1em;
-    text-align: center;
-  }
+    h1 {
+      font-family: sans-serif;
+      font-size: 3.5em;
+      color: rgb(255, 255, 255);
+      text-shadow: 2px 2px #f55727d5;
+      background-color: #e08835;
+      text-align: center;
+      font-family: "Gloock", serif;
+      font-family: "NTR", sans-serif;
+    }
 
-  a:hover {
-    color: white;
-    background-color: black;
-  }
+    a {
+      text-decoration: none;
+      color: rgb(255, 255, 255);
+      border: 1px solid #f55727d5;
+      background-color: #e08835;
+      font-size: medium;
+      border-radius: 1em;
+      padding-left: 0.5em;
+      padding-right: 0.5em;
+      margin: 1.5em;
+      text-align: center;
+    }
 
-  li {
-    list-style-type: "\1f443";
-  }
-</style>
+    a:hover {
+      color: white;
+      background-color: black;
+    }
+
+    ul {
+      font-family: "Gloock", serif;
+      font-family: "NTR", sans-serif;
+    }
+
+    img {
+      padding-left: 0.5em;
+      padding-right: 0.5em;
+      text-align: center;
+      width: 10rem;
+    }
+
+    ul {
+      font-family: "Gloock", serif;
+      font-family: "NTR", sans-serif;
+      padding-left: 0.5em;
+      padding-right: 0.5em;
+    }
+
+    footer {
+      font-family: "NTR", sans-serif;
+      text-align: right;
+    }
+  </style>
+</html>
