--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
+<!DOCTYPE html>
+
 <head>
+  <meta charset="UTF-8" />
+  <title>Varuni's Website 3</title>
+  <link rel="icon" href="favicon.ico" />
+
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=NTR&display=swap" rel="stylesheet" />
